fix: preserve keyboard key up signals